--- a/contact.html
+++ b/contact.html
@@ -46,12 +46,14 @@ Template re-distribution is NOT allowed on any kind of download website. Thank y
                     <div class="tm-img-overlay-text text-white p-5">
                         <h4 class="mb-4">Biodata</h4>
                         <p class="tm-small">Muhammad Bagus Panji</p>
+                        <p class="tm-small">S1 Teknik Informatika Universitas Yudhartha Pasuruan</p>
+                        <p class="tm-small"><a href="https://www.google.com/maps/@-7.7629516,112.7183755,15z?hl=id" class="text-white"><i class="icofont-google-map text-danger"></i> Purwosari, Pasuruan</a></p>
                         <p class="tm-small"><a href="http://wa.me/6285785800430" class="text-success"><i class="icofont-whatsapp"></i> Whatsapp</a></p>
                         <p class="tm-small"><a href="https://www.instagram.com/maguspanji/" class="text-danger"><i class="icofont-instagram"></i> Instagram</a></p>
                     </div>
                 </div>
                 <div class="tm-content">
-                    <form action="" method="POST" class="tm-contact-form">
+                    <form action="#" method="POST" class="tm-contact-form">
                         <div class="form-group">
                             <input type="text" id="contact_name" name="contact_name" class="form-control rounded-0 border-top-0 border-right-0 border-left-0" placeholder="Name" required="" />
                         </div>
