--- a/gallery.html
+++ b/gallery.html
@@ -61,11 +61,11 @@ Template re-distribution is NOT allowed on any kind of download website. Thank y
                             </div>
                             <div class="col-sm-6 tm-gallery-item">
                                 <figure class="effect-bubba">
-                                    <img src="img/gallery/gallery-img-03.jpg" alt="Gallery item" class="img-fluid" />
+                                    <img src="img/gallery/tumbas-mobile.png" alt="Gallery item" class="img-fluid" />
                                     <figcaption>
-                                        <h2>Fresh <span>Bubba</span></h2>
-                                        <p>Bubba likes to appear out of thin air.</p>
-                                        <a href="img/gallery/gallery-img-03.jpg">View more</a>
+                                        <h2>Tumbas <span>Online</span></h2>
+                                        <p>Aplikasi Jastip dari Pasuruan.</p>
+                                        <a href="img/gallery/tumbas-mobile.png">View more</a>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -81,11 +81,11 @@ Template re-distribution is NOT allowed on any kind of download website. Thank y
                             </div>
                             <div class="col-sm-6 tm-gallery-item">
                                 <figure class="effect-bubba">
-                                    <img src="img/gallery/gallery-img-04.jpg" alt="Gallery item" class="img-fluid" />
+                                    <img src="img/gallery/sekolah-kita-mobile.png" alt="Gallery item" class="img-fluid" />
                                     <figcaption>
-                                        <h2>Fresh <span>Bubba</span></h2>
-                                        <p>Bubba likes to appear out of thin air.</p>
-                                        <a href="img/gallery/gallery-img-04.jpg">View more</a>
+                                        <h2>Sekolah <span>Kita</span></h2>
+                                        <p>Aplikasi E-Raport untuk pemantauan siswa.</p>
+                                        <a href="img/gallery/sekolah-kita-mobile.png">View more</a>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -101,11 +101,11 @@ Template re-distribution is NOT allowed on any kind of download website. Thank y
                             </div>
                             <div class="col-sm-6 tm-gallery-item">
                                 <figure class="effect-bubba">
-                                    <img src="img/gallery/gallery-img-06.jpg" alt="Gallery item" class="img-fluid" />
+                                    <img src="img/gallery/cubi-invoice-mobile.png" alt="Gallery item" class="img-fluid" />
                                     <figcaption>
-                                        <h2>Fresh <span>Bubba</span></h2>
-                                        <p>Bubba likes to appear out of thin air.</p>
-                                        <a href="img/gallery/gallery-img-06.jpg">View more</a>
+                                        <h2>Cubi <span>Invoice</span></h2>
+                                        <p>Aplikasi invoice perusahaan cubie spot.</p>
+                                        <a href="img/gallery/cubi-invoice-mobile.png">View more</a>
                                     </figcaption>
                                 </figure>
                             </div>
@@ -141,11 +141,11 @@ Template re-distribution is NOT allowed on any kind of download website. Thank y
                             </div>
                             <div class="col-sm-6 tm-gallery-item">
                                 <figure class="effect-bubba">
-                                    <img src="img/gallery/gallery-img-06.jpg" alt="Gallery item" class="img-fluid" />
+                                    <img src="img/gallery/bayur-mobile.png" alt="Gallery item" class="img-fluid" />
                                     <figcaption>
-                                        <h2>Fresh <span>Bubba</span></h2>
-                                        <p>Bubba likes to appear out of thin air.</p>
-                                        <a href="img/gallery/gallery-img-06.jpg">View more</a>
+                                        <h2>Bayur</h2>
+                                        <p>Aplikasi sayur online lokal.</p>
+                                        <a href="img/gallery/bayur-mobile.png">View more</a>
                                     </figcaption>
                                 </figure>
                             </div>
