--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@ Template re-distribution is NOT allowed on any kind of download website. Thank y
             <nav class="tm-nav">
                 <ul>
                     <li>
-                        <a href="index.html"><span class="tm-nav-deco"></span>Intro</a>
+                        <a href="index.html"><span class="tm-nav-deco"></span>About Me</a>
                     </li>
                     <li>
                         <a href="gallery.html"><span class="tm-nav-deco"></span>Gallery</a>
